# knowledge-king-backend

./: .env.sample  .gitignore  .gitmodules  Makefile  README.md  celo_config.json  flake.nix  main.py  pyproject.toml  questions.json  quizzes.db
Knowking.sol/: KnowledgeKingGame.json
Token.sol/: KnowledgeKingToken.json
app/: config.py  database.py
app/models/: quiz.py
app/routes/: quiz.py
app/schemas/: quiz.py
