[project]
name = "knoledge-king-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pydantic>=2.11.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "web3>=7.10.0",
]
